@@ -10,23 +10,25 @@ import com.weedow.schemaorg.generator.model.field.Mutator;
 import com.weedow.schemaorg.generator.model.jsonld.DomainIncludes;
 import com.weedow.schemaorg.generator.model.jsonld.GraphItem;
 import com.weedow.schemaorg.generator.model.utils.ModelUtils;
+import com.weedow.schemaorg.generator.parser.ParserOptions;
 
+import java.util.ArrayList;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class PropertyModelHandlerImpl implements ModelHandler {
 
     private static final Logger LOG = LoggerFactory.getLogger(PropertyModelHandlerImpl.class);
 
     @Override
-    public boolean supports(GraphItem graphItem) {
+    public boolean supports(GraphItem graphItem, ParserOptions options) {
         return graphItem.getTypes().contains("rdf:Property");
     }
 
     @Override
-    public void handle(Map<String, Type> schemaDefinitions, GraphItem graphItem) {
-        final List<Type> propertyTypes = ModelUtils.getPropertyTypes(schemaDefinitions, graphItem);
+    public void handle(Map<String, Type> schemaDefinitions, GraphItem graphItem, ParserOptions options) {
+        List<Type> propertyTypes = deduplicateJavaTypes(ModelUtils.getPropertyTypes(schemaDefinitions, graphItem), options);
         if (propertyTypes.isEmpty()) {
             LOG.info("** DEPRECATED ** superseded by {}", graphItem.getSupersededBy().getId());
             return;
@@ -61,7 +63,7 @@ public class PropertyModelHandlerImpl implements ModelHandler {
                                 type::getName,
                                 field::getFieldName
                         ))
-                .collect(Collectors.toList());
+                .toList();
 
         final Property property = new Property(
                 graphItem.getId(),
@@ -75,5 +77,27 @@ public class PropertyModelHandlerImpl implements ModelHandler {
         domainIncludes.stream().map(DomainIncludes::getId).forEach(id ->
                 ModelUtils.getType(schemaDefinitions, id).addProperty(property)
         );
+    }
+
+    private List<Type> deduplicateJavaTypes(List<Type> propertyTypes, ParserOptions options) {
+        if(!options.isUsedJavaTypes()) {
+            return propertyTypes;
+        }
+
+        Map<String, Type> usedJavaTypeMap = new LinkedHashMap<>();
+
+        List<Type> uniquePropertyTypes = new ArrayList<>();
+
+        for (Type type : propertyTypes) {
+            if (type.isUsedJavaType()) {
+                usedJavaTypeMap.putIfAbsent(type.getName(), type);
+            } else {
+                uniquePropertyTypes.add(type);
+            }
+        }
+
+        uniquePropertyTypes.addAll(usedJavaTypeMap.values());
+
+        return uniquePropertyTypes;
     }
 }
